Closed Bug 551635 Opened 14 years ago Closed 14 years ago

Crash [@ nsCanvasFrame::SetHasFocus] trying to focus frameset

Categories

(Core :: Web Painting, defect)

x86
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: roc)

References

Details

(Keywords: crash, regression, testcase)

Crash Data

Attachments

(3 files)

sf is (nsIScrollableFrame *) 0x0.

Likely a regression from bug 546033.
Attached file stack trace
Attached patch fixSplinter Review
Assignee: nobody → roc
Status: NEW → ASSIGNED
Attachment #431807 - Flags: review?(matspal)
Whiteboard: [needs review]
Comment on attachment 431807 [details] [diff] [review]
fix

r=mats
Attachment #431807 - Flags: review?(matspal) → review+
Flags: in-testsuite?
Whiteboard: [needs review]
Whiteboard: [needs landing]
http://hg.mozilla.org/mozilla-central/rev/a3f860add4c2
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Flags: in-testsuite? → in-testsuite+
Resolution: --- → FIXED
Whiteboard: [needs landing]
Crash Signature: [@ nsCanvasFrame::SetHasFocus]
Component: Layout: View Rendering → Layout: Web Painting
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: