Bug 551635. Don't crash if we focus the root element and there's no root scroll frame. r=mats